--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,10 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_svg: ^2.0.10+1
   mobile_scanner: ^5.1.1
+  supabase_flutter: ^2.5.6
+  flutter_dotenv: ^5.1.0
+  qr_flutter: ^4.1.0
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
@@ -28,4 +32,5 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - .env
 
